--- a/css/style.css
+++ b/css/style.css
@@ -323,6 +323,7 @@ input[type=submit]:hover {
 
 footer
 {
+  gap: 20px;
   background-color: var(--cdark);
   display: flex;
   justify-content: center;
