--- a/css/style.css
+++ b/css/style.css
@@ -241,6 +241,13 @@ input, select, textarea {
   resize: vertical;
 }
 
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+/* Do i still need this ??? idk */
 input[type=submit] {
   background-color: #04AA6D;
   color: white;
@@ -252,7 +259,8 @@ input[type=submit] {
 
 label
 {
-  font-weight: 600;
+  color: var(--cdark);
+  font-weight: 450;
 }
 
 #konversi-cara
@@ -264,15 +272,36 @@ input[type=submit]:hover {
   background-color: #45a049;
 }
 
-.container {
-  border-radius: 5px;
-  background-color: #f2f2f2;
-  padding: 20px;
+.input-container
+{
+  display: flex;
+  align-items: center;
+  flex-direction: row-reverse;
+}
+
+.input-container img
+{
+  position: absolute;
+  transform: translateX(-10px);
+  cursor: pointer;
 }
 
 .converter
 {
   gap: 20px;
+}
+
+.converter p
+{
+  background-color: rgb(255, 107, 107);
+  padding: 5px;
+  border-radius: 20px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  text-align: center;
+
+  color: rgb(113, 0, 0);
+  font-weight: 600;
 }
 
 .buttons
